added order update to include the other database columns
